<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:title="@string/pref_title"
 android:key="camerapaper_settings">

	<PreferenceCategory android:title="@string/category_ui">
		<CheckBoxPreference
			android:key="use_tap_circle"
			android:title="@string/use_tap_circle"
			android:summary="@string/use_tap_circle_summary"
			android:defaultValue="true"
			/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/category_capture">
		<ListPreference
			android:key="capture_method"
			android:title="@string/capture_method_title"
			android:dialogTitle="@string/capture_method_title"
			android:entries="@array/capture_methods"
			android:entryValues="@array/capture_method_values"
			android:defaultValue="1">
		</ListPreference>
	</PreferenceCategory>
</PreferenceScreen>